cambio de nombre de nombre_producto a name
